# LISA-AI

./: README.md
LisaAI-master/: Dockerfile  README.md  SCHEDULING_README.md  pyproject.toml  requirements.txt
LisaAI-master/app/: main.py
LisaAI-master/app/src/: authview.py  constants.py  data_types.py  error_messages.py  knowledge_base.py  rating.py  signup.py  view.py
LisaAI-master/app/src/modules/: auth.py  aws.py  databases.py  scheduling.py  services.py
